Change Hello Word to Kabinet Kembali BLar and added new image "test.png" and used as resource

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <h1>Kabinet Kembali BLar!</h1>
+
+    <div>
+        <img style="max-width: 50%;" src="img/test.png" alt="Non-Dept" />
+        <h4>Non Dept Luv</h4>
+    </div>
 </body>
 
 </html>
