--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Kabinet Kembali BLar!</h1>
 
-    <div>
-        <img style="max-width: 50%;" src="img/test.png" alt="Non-Dept" />
-        <h4>Non Dept Luv</h4>
+    <div id="profile-container">
+        <img id="profile-pict" style="max-width: 50%;" src="img/test.png" alt="Non-Dept" />
+        <h4 id="label-nondept">Non Dept Luv</h4>
     </div>
 </body>
 
