--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
@@ -11,7 +12,7 @@
     <h1>Kabinet Kembali BLar!</h1>
 
     <div id="profile-container">
-        <img id="profile-pict" style="max-width: 50%;" src="img/test.png" alt="Non-Dept" />
+        <img id="profile-pict" style="max-width: 100%;" src="img/test.png" alt="Non-Dept" />
         <h4 id="label-nondept">Non Dept Luv</h4>
     </div>
 </body>
