--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <h1>Kabinet Kembali BLar!</h1>
-
+    <div id="header">Header</div>
     <div id="profile-container">
+        <h1>Kabinet Kembali BLar!</h1>
         <img id="profile-pict" style="max-width: 100%;" src="img/test.png" alt="Non-Dept" />
         <h4 id="label-nondept">Non Dept Luv</h4>
     </div>
