added new div as footer container with id = footer

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <img id="profile-pict" style="max-width: 100%;" src="img/test.png" alt="Non-Dept" />
         <h4 id="label-nondept">Non Dept Luv</h4>
     </div>
+
+    <div id="footer">Footer</div>
 </body>
 
 </html>
